--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
+<style>
+#blocco-turno { display: block; }
+#blocco-libero { display: none; }
+</style>
+  <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DEANGELISBUS – Presenze</title>
@@ -125,4 +129,5 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
