--- a/index.html
+++ b/index.html
@@ -1,176 +1,167 @@
 <!DOCTYPE html>
 <html lang="it">
-
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <title>DEANGELISBUS – Presenze</title>
 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 
 <style>
-/* =========================================
-   STILE MODERNO – DEANGELISBUS
-========================================= */
+    body{
+        font-family:'Inter','Segoe UI',sans-serif;
+        margin:0;
+        padding:0;
+        background:#eef4ff;
+    }
 
-body {
-    font-family: 'Inter','Segoe UI', sans-serif;
-    margin: 0;
-    padding: 0;
-    background: #eef4ff;
-    color: #2b3a55;
-}
+    .container{
+        max-width:550px;
+        margin:40px auto;
+        padding:0 15px;
+    }
 
-.contenitore {
-    padding: 18px;
-    max-width: 600px;
-    margin: auto;
-}
+    .card{
+        background:#fff;
+        padding:22px;
+        border-radius:18px;
+        box-shadow:0 6px 20px rgba(0,0,0,.12);
+        margin-bottom:20px;
+    }
 
-.carta {
-    background: #fff;
-    border-radius: 18px;
-    padding: 22px;
-    box-shadow: 0 6px 20px rgba(0,0,0,.1);
-    margin-bottom: 26px;
-}
+    h2{
+        display:flex;
+        align-items:center;
+        gap:6px;
+        margin:0 0 16px 0;
+        font-size:1.4rem;
+        color:#2b3a55;
+    }
 
-h2 {
-    display: flex;
-    align-items: center;
-    font-size: 1.3rem;
-    margin-bottom: 14px;
-    gap: 8px;
-}
+    input, select, textarea, button{
+        width:100%;
+        padding:14px;
+        border-radius:12px;
+        border:1px solid #ccd3da;
+        margin-top:10px;
+        font-size:1rem;
+    }
 
-h2 .material-icons-round {
-    color: #0078D7;
-}
+    button{
+        cursor:pointer;
+        border:none;
+    }
 
-input, select, textarea {
-    width: 100%;
-    padding: 14px;
-    margin-top: 8px;
-    border-radius: 12px;
-    border: 1px solid #ccd3da;
-    font-size: 1rem;
-}
+    .btn-primary{
+        background:#0078D7;
+        color:#fff;
+        margin-top:20px;
+    }
 
-button {
-    width: 100%;
-    padding: 14px;
-    margin-top: 16px;
-    background: #0078D7;
-    color: white;
-    border: none;
-    border-radius: 12px;
-    cursor: pointer;
-    font-size: 1rem;
-}
+    .btn-secondary{
+        background:#ef4444;
+        color:#fff;
+        margin-top:10px;
+    }
 
-button.secondary {
-    background: #ef4444;
-}
+    .btn-alt{
+        background:#475569;
+        color:#fff;
+        margin-top:10px;
+    }
 
-button.alt {
-    background: #475569;
-}
+    .page{
+        display:none;
+    }
 
-.pagina { display: none; }
-.attiva { display: block; }
+    .page.active{
+        display:block;
+    }
 
-/* Mostra/Nascondi blocchi descrizione */
-#blocco-turno { display: block; }
-#blocco-libero { display: none; }
-
+    /* campi turno/libero */
+    #descrizione-turno,
+    #descrizione-libera{
+        margin-top:10px;
+    }
 </style>
 </head>
 
 <body>
+<div class="container">
 
-<div class="contenitore">
+    <!-- ================================
+         LOGIN
+    ================================= -->
+    <div id="page-login" class="page card active">
+        <h2><span class="material-icons-round">login</span>Accesso</h2>
 
-<!-- ACCESSO -->
-<div id="page-login" class="pagina attiva carta">
-    <h2><span class="material-icons-round">login</span>Accesso</h2>
+        <label>Autista</label>
+        <input id="login-nome" placeholder="COGNOME Nome">
 
-    <etichetta>Autista</etichetta>
-    <input id="login-nome" placeholder="COGNOME Nome">
+        <label>PIN</label>
+        <input id="login-pin" type="password" placeholder="PIN">
 
-    <etichetta>PIN</etichetta>
-    <input id="login-pin" type="password" placeholder="PIN">
+        <button class="btn-primary" onclick="login()">Entra</button>
+    </div>
 
-    <button onclick="login()">Entra</button>
-</div>
 
-<!-- INSERISCI PRESENZA -->
-<div id="page-presenza" class="pagina carta">
-    <h2><span class="material-icons-round">schedule</span>Inserisci Presenza</h2>
+    <!-- ================================
+         INSERISCI PRESENZA
+    ================================= -->
+    <div id="page-presenza" class="page card">
+        <h2><span class="material-icons-round">edit_calendar</span>Inserisci Presenza</h2>
 
-    <!-- TIPO -->
-    <etichetta>Tipo</etichetta>
-    <select id="tipo" onchange="onChangeTipo()">
-        <option value="Turno">Turno</option>
-        <option value="Noleggio">Noleggio</option>
-        <option value="Riposo">Riposo</option>
-        <option value="Ferie">Ferie</option>
-        <option value="Festivo">Festivo</option>
-        <option value="Malattia">Malattia</option>
-        <option value="Infortunio">Infortunio</option>
-        <option value="Assenza">Assenza</option>
-        <option value="Permesso">Permesso</option>
-    </select>
+        <label>Tipo</label>
+        <select id="tipo" onchange="onChangeTipo()">
+            <option value="Turno">Turno</option>
+            <option value="Noleggio">Noleggio</option>
+            <option value="Riposo">Riposo</option>
+            <option value="Ferie">Ferie</option>
+            <option value="Festivo">Festivo</option>
+            <option value="Malattia">Malattia</option>
+            <option value="Infortunio">Infortunio</option>
+            <option value="Assenza">Assenza</option>
+            <option value="Permesso">Permesso</option>
+        </select>
 
-    <!-- DESCRIZIONE -->
-    <etichetta>Descrizione</etichetta>
-
-    <div id="blocco-turno">
+        <label>Descrizione / Turno</label>
         <select id="descrizione-turno"></select>
-    </div>
 
-    <div id="blocco-libero">
         <input id="descrizione-libera" placeholder="Inserisci testo libero">
+
+        <label>Data</label>
+        <input id="data" type="date">
+
+        <label>Ora Inizio</label>
+        <input id="oraInizio" type="time">
+
+        <label>Ora Fine</label>
+        <input id="oraFine" type="time">
+
+        <label>Note</label>
+        <textarea id="note" placeholder="Nota opzionale"></textarea>
+
+        <button class="btn-primary" onclick="salvaPresenza()">Salva</button>
+        <button class="btn-alt" onclick="vaiStorico()">Storico</button>
+        <button class="btn-secondary" onclick="logout()">Esci</button>
     </div>
 
-    <!-- DATA -->
-    <etichetta>Data</etichetta>
-    <input id="data" type="date">
 
-    <!-- ORARI -->
-    <div style="display:flex; gap: 12px;">
-        <div style="flex:1;">
-            <etichetta>Ora Inizio</etichetta>
-            <input id="oraInizio" type="time">
-        </div>
-        <div style="flex:1;">
-            <etichetta>Ora Fine</etichetta>
-            <input id="oraFine" type="time">
-        </div>
+    <!-- ================================
+         STORICO
+    ================================= -->
+    <div id="page-storico" class="page card">
+        <h2><span class="material-icons-round">history</span>Storico</h2>
+
+        <div id="storico-container">Caricamento...</div>
+
+        <button class="btn-alt" onclick="mostraPagina('page-presenza')">➕ Inserisci</button>
+        <button class="btn-secondary" onclick="logout()">Esci</button>
     </div>
-
-    <!-- NOTE -->
-    <etichetta>Note</etichetta>
-    <textarea id="note" placeholder="Nota opzionale"></textarea>
-
-    <button onclick="salvaPresenza()">💾 Salva</button>
-    <button class="alt" onclick="vaiStorico()">📜 Storico</button>
-    <button class="secondary" onclick="logout()">Esci</button>
-</div>
-
-
-<!-- STORICO -->
-<div id="page-storico" class="pagina carta">
-    <h2><span class="material-icons-round">history</span>Storico</h2>
-
-    <div id="storico-container">Caricamento...</div>
-
-    <button onclick="mostraPagina('page-presenza')" class="alt">➕ Inserisci</button>
-    <button class="secondary" onclick="logout()">Esci</button>
-</div>
 
 </div>
 
 <script src="app.js"></script>
+
 </body>
 </html>
