--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>DEANGELISBUS – Presenze</title>
 
+<!-- Icone Material -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 
 <style>
@@ -45,6 +47,7 @@
         border:1px solid #ccd3da;
         margin-top:10px;
         font-size:1rem;
+        box-sizing:border-box;
     }
 
     button{
@@ -73,17 +76,17 @@
     .page{
         display:none;
     }
-
     .page.active{
         display:block;
     }
 
-    /* campi turno/libero */
+    /* campo turno/testo libero */
     #descrizione-turno,
     #descrizione-libera{
         margin-top:10px;
     }
 </style>
+
 </head>
 
 <body>
@@ -124,9 +127,10 @@
             <option value="Permesso">Permesso</option>
         </select>
 
-        <label>Descrizione / Turno</label>
+        <!-- campo turno -->
         <select id="descrizione-turno"></select>
 
+        <!-- campo testo libero -->
         <input id="descrizione-libera" placeholder="Inserisci testo libero">
 
         <label>Data</label>
