--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </head>
 
 <body>
-<div class="container">
+<div id="storico-container"></div>
 
     <!-- ================================
          LOGIN
@@ -169,3 +169,4 @@
 
 </body>
 </html>
+
