--- a/index.html
+++ b/index.html
@@ -3,113 +3,95 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <title>DEANGELISBUS – Presenze</title>
 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 
 <style>
-    body {
-        margin: 0;
-        font-family: 'Inter', 'Segoe UI', sans-serif;
-        background: #eaf2ff;
-    }
+body{
+    margin:0;
+    font-family:'Inter','Segoe UI',sans-serif;
+    background:#eaf2ff;
+}
 
-    .container {
-        max-width: 500px;
-        margin: 30px auto;
-        background: #fff;
-        padding: 25px;
-        border-radius: 20px;
-        box-shadow: 0 6px 20px rgba(0,0,0,0.12);
-    }
+.contenitore{
+    max-width:500px;
+    margin:30px auto;
+    background:#fff;
+    padding:25px;
+    border-radius:20px;
+    box-shadow:0 6px 20px rgba(0,0,0,.12);
+}
 
-    .page { display: none; }
+h2{
+    margin-top:0;
+    display:flex;
+    align-items:center;
+    gap:10px;
+    color:#1b3a7a;
+}
 
-    h2 {
-        margin-top: 0;
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        color: #1b3a7a;
-    }
+label{
+    font-weight:600;
+    margin-top:15px;
+    display:block;
+    font-size:15px;
+}
 
-    label {
-        font-weight: 600;
-        margin-top: 15px;
-        display: block;
-        font-size: 15px;
-        color: #2b3a55;
-    }
+input,select,textarea{
+    width:100%;
+    padding:12px;
+    margin-top:6px;
+    border-radius:10px;
+    border:1px solid #d0d6de;
+    font-size:16px;
+}
 
-    input, select, textarea {
-        width: 100%;
-        padding: 12px;
-        margin-top: 6px;
-        border-radius: 10px;
-        border: 1px solid #d0d6de;
-        font-size: 16px;
-        box-sizing: border-box;
-    }
+button{
+    width:100%;
+    padding:14px;
+    border:none;
+    border-radius:12px;
+    font-size:16px;
+    color:#fff;
+    cursor:pointer;
+    margin-top:15px;
+}
 
-    textarea { height: 70px; }
+.btn-login  { background:#0078D7; }
+.btn-salva  { background:#0078D7; }
+.btn-storico{ background:#4854d4; }
+.btn-esci   { background:#d63c3c; }
 
-    button {
-        width: 100%;
-        padding: 14px;
-        margin-top: 20px;
-        border: none;
-        border-radius: 12px;
-        font-size: 16px;
-        cursor: pointer;
-        color: #fff;
-    }
+.page { display:none; }
 
-    .btn-login { background: #0078D7; }
-    .btn-salva { background: #0078D7; }
-    .btn-storico { background: #4557d4; }
-    .btn-esci { background: #d63c3c; }
+.card{
+    background:#fff;
+    padding:15px;
+    border-radius:12px;
+    margin-bottom:15px;
+    box-shadow:0 3px 10px rgba(0,0,0,0.1);
+}
 
-    .btn { padding: 10px; border-radius: 8px; cursor: pointer; color: white; }
-    .blu { background: #0078D7; width: 32%; }
-    .arancione { background: #ff8c00; width: 32%; }
-    .rosso { background: #d63c3c; width: 32%; }
+.barra-btn{
+    display:flex;
+    justify-content:space-between;
+    margin-top:10px;
+}
 
-    .card {
-        background: #fff;
-        padding: 20px;
-        border-radius: 16px;
-        margin-bottom: 20px;
-        box-shadow: 0 4px 14px rgba(0,0,0,0.1);
-    }
-
-    .rigaBottoni {
-        display: flex;
-        margin-top: 15px;
-        justify-content: space-between;
-    }
-
-    #toast {
-        position: fixed;
-        bottom: 20px;
-        left: 50%;
-        transform: translateX(-50%);
-        background: #1b3a7a;
-        color: #fff;
-        padding: 12px 25px;
-        border-radius: 12px;
-        display: none;
-    }
+.blu{ background:#0078D7; width:32%; }
+.arancione{ background:#ff8c00; width:32%; }
+.rosso{ background:#d63c3c; width:32%; }
 </style>
 </head>
 
-<body>
 
-<div class="container">
+<body>
+<div class="contenitore">
 
     <!-- LOGIN -->
     <div id="page-login" class="page active">
-        <h2><span class="material-icons-round">login</span>Accesso</h2>
+        <h2><span class="material-icons-round">login</span> Accesso</h2>
 
         <label>Autista</label>
         <input id="login-nome" placeholder="COGNOME Nome">
@@ -121,9 +103,10 @@
     </div>
 
 
-    <!-- INSERIMENTO PRESENZA -->
+
+    <!-- PRESENZA -->
     <div id="page-presenza" class="page">
-        <h2><span class="material-icons-round">edit_calendar</span>Inserisci Presenza</h2>
+        <h2><span class="material-icons-round">edit_calendar</span> Inserisci Presenza</h2>
 
         <label>Tipo</label>
         <select id="tipo">
@@ -139,9 +122,11 @@
             <option value="Permesso">Permesso</option>
         </select>
 
-        <label>Turno / Descrizione</label>
+        <label>Descrizione / Turno</label>
         <select id="descrizione-turno"></select>
-        <input id="descrizione-libera" placeholder="Descrizione libera (se non turno)">
+
+        <label>Descrizione libera</label>
+        <input id="descrizione-libera" placeholder="Testo libero">
 
         <label>Data</label>
         <input type="date" id="data">
@@ -161,21 +146,19 @@
     </div>
 
 
+
     <!-- STORICO -->
     <div id="page-storico" class="page">
-        <h2><i class="material-icons-round">history</i>Storico</h2>
+        <h2><span class="material-icons-round">history</span> Storico</h2>
 
         <div id="contenitore-storico"></div>
 
-        <button class="btn-storico" onclick="mostraPagina('page-presenza')">Inserisci</button>
-        <button class="btn-esci" onclick="logout()">Esci</button>
+        <button onclick="mostraPagina('page-presenza')" class="btn-login">➕ Inserisci</button>
+        <button onclick="logout()" class="btn-esci">Esci</button>
     </div>
 
 </div>
 
-<div id="toast"></div>
-
 <script src="app.js"></script>
-
 </body>
 </html>
