--- a/index.html
+++ b/index.html
@@ -87,7 +87,36 @@
     .page { display: none; }
     .active { display: block; }
 
+    /* === STILE PULSANTI STORICO (MANCAVA!) === */
+    .rigaBottoni {
+        display: flex;
+        gap: 10px;
+        margin-top: 12px;
+    }
+
+    .btn {
+        flex: 1;
+        padding: 12px;
+        border-radius: 10px;
+        color: #fff;
+        border: none;
+        cursor: pointer;
+        font-size: 15px;
+    }
+
+    .blu {
+        background: #1d4ed8;
+    }
+
+    .arancione {
+        background: #f97316;
+    }
+
+    .rosso {
+        background: #dc2626;
+    }
 </style>
+
 </head>
 
 <body>
@@ -173,5 +202,6 @@
 
 </body>
 </html>
+
 
 
